Attempt adding navigation

--- a/starter/app/src/main/res/layout/fragment_login.xml
+++ b/starter/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,8 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        tools:context=".LoginFragment">
+        tools:context=".LoginFragment"
+        >
 
         <TextView
             android:id="@+id/email_field_label"
