Add log out, try to add fragment blocked

--- a/starter/app/src/main/res/layout/activity_main.xml
+++ b/starter/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+<!--
+For a simple layout with minimal nesting, LinearLayout is used to reduce complexity it  on performance, on drag and drop user interface of Android Studio, on XML lines, on kB size of the app.
+-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
