--- a/starter/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -10,7 +11,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
 
             <LinearLayout
                 android:id="@+id/linear_layout"
@@ -19,6 +21,7 @@
                 android:orientation="vertical">
 
                 <Toolbar
+                    android:id="@+id/shoe_list_toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -26,7 +29,7 @@
                     android:id="@+id/add_shoe_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end|bottom"
+                    android:layout_gravity="center_horizontal"
                     android:contentDescription="@string/add_shoe_button_label"
                     android:src="@drawable/ic_add" />
             </LinearLayout>
