--- a/starter/app/src/main/res/navigation/navigation.xml
+++ b/starter/app/src/main/res/navigation/navigation.xml
@@ -44,7 +44,9 @@
             android:id="@+id/action_shoeListFragment_to_loginFragment"
             app:destination="@id/loginFragment"
             app:popUpTo="@id/shoeListFragment"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="true" 
+            
+            />
     </fragment>
     <fragment
         android:id="@+id/shoeDetailFragment"
