--- a/starter/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_list.xml
@@ -3,6 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!--
+    This screen is a little more complex so it uses ConstraintLayout to
+    flatten view tree for faster view drawing and lower memory usage.
+
+    ScrollView used because data could fill the screen requiring scrolling
+-->
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
