--- a/starter/app/src/main/res/layout/fragment_login.xml
+++ b/starter/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <!--
+    Login screen was kept very simple,  linear layout would be more performant
+     because it doesn't need to make any extra measurements
+    -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
