--- a/AsteroidRadar/starter/app/src/main/res/layout/fragment_main.xml
+++ b/AsteroidRadar/starter/app/src/main/res/layout/fragment_main.xml
@@ -28,7 +28,10 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                app:srcCompat="@drawable/placeholder_picture_of_day"/>
+                app:srcCompat="@drawable/placeholder_picture_of_day"
+                android:contentDescription="@{viewModel.pictureOfTheDay.title}"
+                app:pictureOfTheDay="@{viewModel.pictureOfTheDay.url}"
+                />
 
             <TextView
                 android:id="@+id/textView"
