Revert to AsteroidWorkerManager with list

--- a/AsteroidRadar/starter/app/src/main/res/layout/fragment_main.xml
+++ b/AsteroidRadar/starter/app/src/main/res/layout/fragment_main.xml
@@ -29,9 +29,10 @@
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/placeholder_picture_of_day"
-                android:contentDescription="@{viewModel.pictureOfTheDay.title}"
-                app:pictureOfTheDay="@{viewModel.pictureOfTheDay.url}"
                 />
+<!--                android:contentDescription="@{viewModel.pictureOfTheDay.title}"-->
+<!--                app:pictureOfTheDay="@{viewModel.pictureOfTheDay.url}"-->
+
 
             <TextView
                 android:id="@+id/textView"
