--- a/AsteroidRadar/starter/app/src/main/res/layout/item_asteroid.xml
+++ b/AsteroidRadar/starter/app/src/main/res/layout/item_asteroid.xml
@@ -2,6 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="asteroid"
+            type="com.udacity.asteroidradar.models.AsteroidFeedResponseModelItem" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +23,7 @@
             android:textColor="@android:color/white"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:text="@{asteroid.name}"
             />
         <TextView
             android:id="@+id/date"
@@ -26,6 +34,7 @@
             app:layout_constraintTop_toBottomOf="@id/codename"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"
+            android:text="@{asteroid.close_approach_data[0].close_approach_date}"
             />
         <ImageView
             android:id="@+id/icon"
@@ -35,6 +44,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            setIsPotentiallyHazardousIcon="@{asteroid.is_potentially_hazardous_asteroid}"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
