Add circular progress and loading button

--- a/LoadApp/starter/app/src/main/res/layout/content_main.xml
+++ b/LoadApp/starter/app/src/main/res/layout/content_main.xml
@@ -9,17 +9,35 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <com.udacity.LoadingButton
-        android:id="@+id/custom_button"
+    <FrameLayout
+        android:id="@+id/loading_button"
         android:layout_width="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="60dp"
-        android:layout_margin="20dp"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="?attr/colorPrimary"
-        android:text="Download"
-        />
+        >
+
+        <com.udacity.LoadingButton
+            android:id="@+id/custom_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:background="?attr/colorPrimary"
+            android:gravity="center"
+            android:text="Download"/>
+
+        <com.udacity.CircularProgressView
+            android:id="@+id/progress_circle"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginRight="-140dp"
+            android:gravity="right" />
+
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
